Add running tasks to the UI's top bar

--- a/ui/index.html
+++ b/ui/index.html
@@ -55,14 +55,12 @@
             <!-- /.navbar-header -->
 
             <ul class="nav navbar-top-links navbar-right">
-				<!-- .dropdown loading -->
+				<!-- .dropdown tasks loading -->
 				<li class="dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">
 						<i id="top-loading-icon" class="fa fa-circle-o-notch fa-spin fa-fw"></i><i class="fa fa-caret-down"></i>
                     </a>
-                    <ul class="dropdown-menu dropdown-user">
-                        <li><a href="#"><i class="fa fa-circle-o-notch fa-fw""></i>Refresh</a>
-                        </li>
+                    <ul class="dropdown-menu dropdown-tasks">
                     </ul>
 				</li>
                 <!-- .dropdown user -->
