Each exchange can now contain details in the UI

--- a/ui/index.html
+++ b/ui/index.html
@@ -27,6 +27,9 @@
     <!-- Custom Fonts of the Bootstrap template -->
     <link href="../node_modules/startbootstrap-sb-admin-2/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+    <!-- Data tables css -->
+    <link href="../node_modules/datatables.net-dt/css/jquery.dataTables.css" rel="stylesheet" type="text/css">
+
 	<!-- Our own custom CSS -->
     <link href="rotkelchen.css" rel="stylesheet" type="text/css">
 
