Add OTC trades pages in the UI

--- a/ui/index.html
+++ b/ui/index.html
@@ -106,7 +106,7 @@
                             <a href="#"><i class="fa fa-exchange fa-fw"></i> Trades<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="#external_trades">External Trades</a>
+                                    <a href="#otctrades">OTC Trades</a>
                                 </li>
                                 <li>
                                     <a href="#">Exchange Trades</a>
