Swap jquery-ui for jquerydatetimepicker
Using this package for date and time picker now: https://github.com/xdan/datetimepicker

--- a/ui/index.html
+++ b/ui/index.html
@@ -31,8 +31,7 @@
     <link href="../node_modules/datatables.net-dt/css/jquery.dataTables.css" rel="stylesheet" type="text/css">
 
 	<!-- Jquery ui date picker css -->
-	<link href="../node_modules/jquery-ui/themes/base/theme.css" rel="stylesheet" type="text/css">
-	<link href="../node_modules/jquery-ui/themes/base/datepicker.css" rel="stylesheet" type="text/css">
+	<link href="../node_modules/jquery-datetimepicker/build/jquery.datetimepicker.min.css" rel="stylesheet" type="text/css">
 
 	<!-- Our own custom CSS -->
     <link href="rotkelchen.css" rel="stylesheet" type="text/css">
@@ -160,18 +159,10 @@
     <!-- Metis Menu Plugin JavaScript -->
     <script src="../node_modules/startbootstrap-sb-admin-2/vendor/metisMenu/metisMenu.min.js"></script>
 
-	<!-- Commenting them out since I don't use Morris charts and they mess with jquery:
-		 http://stackoverflow.com/questions/18176755/morris-js-graph-container-element-not-found#18879173
-	   -->
-    <!-- Morris Charts JavaScript -->
-    <!-- <script src="../node_modules/startbootstrap-sb-admin-2/vendor/raphael/raphael.min.js"></script>
-		 <script src="../node_modules/startbootstrap-sb-admin-2/vendor/morrisjs/morris.min.js"></script>
-		 <script src="../node_modules/startbootstrap-sb-admin-2/data/morris-data.js"></script> -->
-
     <!-- Custom Theme JavaScript -->
     <script src="../node_modules/startbootstrap-sb-admin-2/dist/js/sb-admin-2.js"></script>
-	<!-- jquery-ui for Datepicker -->
-	<script src="../node_modules/jquery-ui/ui/widgets/datepicker.js"></script>
+	<!-- jquery for Datepicker -->
+	<script src="../node_modules/jquery-datetimepicker/build/jquery.datetimepicker.full.js"></script>
 	<script>
 	require('./renderer.js')
 	</script>
