--- a/ui/index.html
+++ b/ui/index.html
@@ -33,6 +33,9 @@
 	<!-- Jquery ui date picker css -->
 	<link href="../node_modules/jquery-datetimepicker/build/jquery.datetimepicker.min.css" rel="stylesheet" type="text/css">
 
+	<!-- context menu css -->
+	<link href="jquery.contextMenu.min.css" rel="stylesheet" type="text/css">
+
 	<!-- Our own custom CSS -->
     <link href="rotkelchen.css" rel="stylesheet" type="text/css">
 
@@ -45,7 +48,6 @@
 </head>
 
 <body>
-
     <div id="wrapper">
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
@@ -163,6 +165,8 @@
     <script src="../node_modules/startbootstrap-sb-admin-2/dist/js/sb-admin-2.js"></script>
 	<!-- jquery for Datepicker -->
 	<script src="../node_modules/jquery-datetimepicker/build/jquery.datetimepicker.full.js"></script>
+	<!-- jquery for context menu -->
+	<script src="jquery.contextMenu.min.js"></script>
 	<script>
 	require('./renderer.js')
 	</script>
