--- a/ui/index.html
+++ b/ui/index.html
@@ -138,7 +138,7 @@
             </div>
             <!-- /.row -->
             <div class="row">
-                <div id="leftest-column" class="col-lg-3 col-md-6">
+                <div id="dashboard-contents" class="col-lg-12">
 					<!-- Boxes go in here -->
                 </div>
             </div>
