Add jquery-multiselect package
Taken from: http://loudev.com/

--- a/ui/index.html
+++ b/ui/index.html
@@ -36,6 +36,9 @@
 	<!-- jquery confirm css -->
 	<link href="css/jquery-confirm.css" rel="stylesheet" type="text/css">
 
+	<!-- jquery multi-select css -->
+	<link href="css/multi-select.css" rel="stylesheet" type="text/css">
+
 	<!-- Our own custom CSS -->
     <link href="css/rotkelchen.css" rel="stylesheet" type="text/css">
 
@@ -169,6 +172,8 @@
 	<script src="depending_js/jquery.contextMenu.min.js"></script>
 	<!-- js source for jquery-confirm -->
 	<script src="depending_js/jquery-confirm.js"></script>
+	<!-- js source for jquery.multi-select -->
+	<script src="depending_js/jquery.multi-select.js"></script>
 	<script>
 	require('./renderer.js')
 	</script>
