Create a generic create_or_reload function

--- a/ui/index.html
+++ b/ui/index.html
@@ -61,7 +61,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Rotkelchen</a>
+                <a class="navbar-brand" href="">Rotkelchen</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -104,10 +104,10 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="#index"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-exchange fa-fw"></i> Trades<span class="fa arrow"></span></a>
+                            <a><i class="fa fa-exchange fa-fw"></i> Trades<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="#otctrades">OTC Trades</a>
