Add a tax report page

--- a/ui/index.html
+++ b/ui/index.html
@@ -119,7 +119,7 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-table fa-fw"></i> Tables</a>
+                            <a href="#taxreport"><i class="fa fa-calculator fa-fw"></i>Tax Report</a>
                         </li>
                     </ul>
                 </div>
