--- a/ui/index.html
+++ b/ui/index.html
@@ -101,6 +101,7 @@
             <!-- /.navbar-top-links -->
 
             <div class="navbar-default sidebar" role="navigation">
+				<div>Not logged in</div>
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li>
