--- a/ui/index.html
+++ b/ui/index.html
@@ -101,7 +101,7 @@
             <!-- /.navbar-top-links -->
 
             <div class="navbar-default sidebar" role="navigation">
-				<div>Not logged in</div>
+				<div class=sidebar-user"><i class="fa fa-times"></i>Not logged in</div>
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li>
