Some UI additions and fixes at data synchronization

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="UI of the Rotkehlchen application">
+    <meta name="author" content="Lefteris Karapetsas">
 
-    <title>Rotkelchen</title>
+    <title>Rotkehlchen</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -61,7 +61,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="">Rotkelchen</a>
+                <a class="navbar-brand" href="">Rotkehlchen</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -101,7 +101,11 @@
             <!-- /.navbar-top-links -->
 
             <div class="navbar-default sidebar" role="navigation">
-				<div class=sidebar-user"><i class="fa fa-times"></i>Not logged in</div>
+                <div class=text-center">
+                    <img id="rotkehlchen_no_text" src="images/rotkehlchen_no_text.png" class="rounded" alt="...">
+                </div>
+                <div id="welcome_text" class=text-center">
+                </div>
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li>
