Improve Initial User Experience
- When logging in for the first time you will now have some of the buttons
  highlighted to guide you towards adding accounts and integrating with
  exchanges.

- Fixed lots of bugs to adding accounts to an initial state

--- a/ui/index.html
+++ b/ui/index.html
@@ -82,7 +82,7 @@
                     </ul>
 				</li>
                 <!-- .dropdown user -->
-                <li class="dropdown">
+                <li id="user-dropdown" class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
                     </a>
@@ -179,6 +179,8 @@
 	<script src="depending_js/jquery-confirm.js"></script>
 	<!-- js source for jquery.multi-select -->
 	<script src="depending_js/jquery.multi-select.js"></script>
+	<!-- js source for jquery.pulsate -->
+	<script src="depending_js/jquery.pulsate.min.js"></script>
 	<script>
 	require('./renderer.js')
 	</script>
