Rename usersettings to user_settings in frontend

--- a/ui/index.html
+++ b/ui/index.html
@@ -87,7 +87,7 @@
                         <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
-                        <li id="usersettingsbutton"><a href="#usersettings"><i class="fa fa-user fa-fw"></i> User Settings</a>
+                        <li id="user_settings_button"><a href="#user_settings"><i class="fa fa-user fa-fw"></i> User Settings</a>
                         </li>
                         <li id="accounting_settings_button"><a href="#accounting_settings"><i class="fa fa-book fa-fw"></i> Accounting Settings</a>
                         </li>
