--- a/ui/index.html
+++ b/ui/index.html
@@ -66,8 +66,19 @@
             <!-- /.navbar-header -->
 
             <ul class="nav navbar-top-links navbar-right">
-				<!-- .dropdown alert -->
-				<li class="dropdown">
+                <ul class="list-group lg-status-icons">
+                    <!-- eth node status -->
+                    <li class="list-group-item eth-node-status">
+                        <a class="eth-node-status-link" href="#">
+                            <i class="fa fa-link fa-fw"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-eth-status alert-success">
+                            <p>Connected to a local ethereum node</p>
+                        </ul>
+                    </li>
+                </ul>
+                <!-- .dropdown alert -->
+                <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="fa fa-bell fa-fw"></i> <i class="fa fa-caret-down"></i>
                     </a>
