--- a/ui/index.html
+++ b/ui/index.html
@@ -65,7 +65,7 @@
             </div>
             <!-- /.navbar-header -->
 
-            <ul class="nav navbar-top-links navbar-right">
+            <ul class="nav navbar-top-links navbar-status-icons">
                 <ul class="list-group lg-status-icons">
                     <!-- eth node status -->
                     <li class="list-group-item eth-node-status">
@@ -77,6 +77,8 @@
                         </ul>
                     </li>
                 </ul>
+            </ul>
+            <ul class="nav navbar-top-links navbar-right">
                 <!-- .dropdown alert -->
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
