--- a/ui/index.html
+++ b/ui/index.html
@@ -204,7 +204,7 @@
 	<!-- js source for jquery.pulsate -->
 	<script src="depending_js/jquery.pulsate.min.js"></script>
 	<script>
-        require('../dist/ui/renderer.js');
+        require('./dist/renderer.js');
         require( 'datatables.net' )( window, $ );
         require( 'datatables.net-dt' )( window, $ );
 	</script>
