--- a/ui/index.html
+++ b/ui/index.html
@@ -27,163 +27,167 @@
     <!-- Data tables css -->
     <link href="../node_modules/datatables.net-dt/css/jquery.dataTables.css" rel="stylesheet" type="text/css">
 
-	<!-- Jquery ui date picker css -->
-	<link href="css/jquery.datetimepicker.min.css" rel="stylesheet" type="text/css">
+    <!-- Jquery ui date picker css -->
+    <link href="css/jquery.datetimepicker.min.css" rel="stylesheet" type="text/css">
 
-	<!-- context menu css -->
-	<link href="css/jquery.contextMenu.min.css" rel="stylesheet" type="text/css">
+    <!-- context menu css -->
+    <link href="css/jquery.contextMenu.min.css" rel="stylesheet" type="text/css">
 
-	<!-- jquery confirm css -->
-	<link href="css/jquery-confirm.css" rel="stylesheet" type="text/css">
+    <!-- jquery confirm css -->
+    <link href="css/jquery-confirm.css" rel="stylesheet" type="text/css">
 
-	<!-- jquery multi-select css -->
-	<link href="css/multi-select.css" rel="stylesheet" type="text/css">
+    <!-- jquery multi-select css -->
+    <link href="css/multi-select.css" rel="stylesheet" type="text/css">
 
-	<!-- Our own custom CSS -->
+    <!-- Our own custom CSS -->
     <link href="css/rotkehlchen.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 
 <body>
-    <div id="wrapper">
-        <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="">Rotkehlchen</a>
-            </div>
-            <!-- /.navbar-header -->
-            <ul class="nav navbar-top-links navbar-status-icons">
-                <ul class="list-group lg-status-icons">
-                    <!-- eth node status -->
-                    <li class="list-group-item eth-node-status">
-                        <a class="eth-node-status-link" href="#">
-                            <i class="fa fa-link fa-fw"></i>
-                        </a>
-                        <ul class="dropdown-menu dropdown-eth-status alert-success">
-                            <p>Connected to a local ethereum node</p>
-                        </ul>
-                    </li>
-                    <li class="list-group-item balance-save-status">
-                        <a class="balances-saved-status-link" href="#">
-                            <i class="fa fa-save fa-fw"></i>
-                        </a>
-                        <ul class="dropdown-menu dropdown-balance-save-status">
-                            <p>Balances last saved:<br><span id="last_balance_save_field">Never</span></p>
-                        </ul>
-                    </li>
-                </ul>
-            </ul>
-            <ul class="nav navbar-top-links navbar-right">
-				<!-- .dropdown alert -->
-				<li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-bell fa-fw"></i> <i class="fa fa-caret-down"></i>
+<div id="wrapper">
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="">Rotkehlchen</a>
+        </div>
+        <!-- /.navbar-header -->
+        <ul class="nav navbar-top-links navbar-status-icons">
+            <ul class="list-group lg-status-icons">
+                <!-- eth node status -->
+                <li class="list-group-item eth-node-status">
+                    <a class="eth-node-status-link" href="#">
+                        <i class="fa fa-link fa-fw"></i>
                     </a>
-                    <ul class="dropdown-menu dropdown-alerts">
-				    </ul>
-				<!-- .dropdown tasks loading -->
-				<li class="dropdown">
-					<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-						<i id="top-loading-icon" class="fa fa-circle-o-notch fa-spin fa-fw"></i><i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-tasks">
-                    </ul>
-				</li>
-                <!-- .dropdown user -->
-                <li id="user-dropdown" class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-user">
-                        <li id="user_settings_button"><a href="#user_settings"><i class="fa fa-user fa-fw"></i> User Settings</a>
-                        </li>
-                        <li id="accounting_settings_button"><a href="#accounting_settings"><i class="fa fa-book fa-fw"></i> Accounting Settings</a>
-                        </li>
-                        <li id="settingsbutton"><a href="#settings"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                        </li>
+                    <ul class="dropdown-menu dropdown-eth-status alert-success">
+                        <p>Connected to a local ethereum node</p>
                     </ul>
                 </li>
-                <!-- /.dropdown -->
-            </ul>
-            <!-- /.navbar-top-links -->
-
-            <div class="navbar-default sidebar" role="navigation">
-                <div class=text-center">
-                    <img id="rotkehlchen_no_text" src="images/rotkehlchen_no_text.png" class="rounded" alt="...">
-                </div>
-                <div id="welcome_text" class=text-center">
-                </div>
-                <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
-                        <li>
-                            <a href="#index"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
-                        </li>
-                        <li>
-                            <a><i class="fa fa-exchange fa-fw"></i> Trades<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="#otctrades">OTC Trades</a>
-                                </li>
-                                <li>
-                                    <a href="#">Exchange Trades</a>
-                                </li>
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
-                        <li>
-                            <a href="#taxreport"><i class="fa fa-calculator fa-fw"></i>Tax Report</a>
-                        </li>
+                <li class="list-group-item balance-save-status">
+                    <a class="balances-saved-status-link" href="#">
+                        <i class="fa fa-save fa-fw"></i>
+                    </a>
+                    <ul class="dropdown-menu dropdown-balance-save-status">
+                        <p>Balances last saved:<br><span id="last_balance_save_field">Never</span></p>
                     </ul>
-                </div>
-                <!-- /.sidebar-collapse -->
-            </div>
-            <!-- /.navbar-static-side -->
-        </nav>
+                </li>
+            </ul>
+        </ul>
+        <ul class="nav navbar-top-links navbar-right">
+            <!-- .dropdown alert -->
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <i class="fa fa-bell fa-fw"></i> <i class="fa fa-caret-down"></i>
+                </a>
+                <ul class="dropdown-menu dropdown-alerts">
+                </ul>
+                <!-- .dropdown tasks loading -->
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <i id="top-loading-icon" class="fa fa-circle-o-notch fa-spin fa-fw"></i>
+                    <i class="fa fa-caret-down"></i>
+                </a>
+                <ul class="dropdown-menu dropdown-tasks">
+                </ul>
+            </li>
+            <!-- .dropdown user -->
+            <li id="user-dropdown" class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+                </a>
+                <ul class="dropdown-menu dropdown-user">
+                    <li id="user_settings_button">
+                        <a href="#user_settings"><i class="fa fa-user fa-fw"></i> User Settings</a>
+                    </li>
+                    <li id="accounting_settings_button">
+                        <a href="#accounting_settings"><i class="fa fa-book fa-fw"></i>Accounting Settings</a>
+                    </li>
+                    <li id="settingsbutton">
+                        <a href="#settings"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li>
+                        <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                    </li>
+                </ul>
+            </li>
+            <!-- /.dropdown -->
+        </ul>
+        <!-- /.navbar-top-links -->
 
-		<!-- Wrapper div only for loading purposes -->
-		<div class="loadingwrapper">
-			<div class="loadingwrapper_text"></div>
-		</div>
-		<!-- / Wrapper div only for loading purposes -->
-
-		<!-- Main page start -->
-        <div id="page-wrapper">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="page-header">Dashboard</h1>
-                </div>
-                <!-- /.col-lg-12 -->
+        <div class="navbar-default sidebar" role="navigation">
+            <div class=text-center">
+                <img id="rotkehlchen_no_text" src="images/rotkehlchen_no_text.png" class="rounded" alt="...">
             </div>
-            <!-- /.row -->
-            <div class="row">
-                <div id="dashboard-contents" class="col-lg-12">
-					<!-- Boxes go in here -->
-                </div>
+            <div id="welcome_text" class=text-center"></div>
+            <div class="sidebar-nav navbar-collapse">
+                <ul class="nav" id="side-menu">
+                    <li>
+                        <a href="#index"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                    </li>
+                    <li>
+                        <a><i class="fa fa-exchange fa-fw"></i> Trades<span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level">
+                            <li>
+                                <a href="#otctrades">OTC Trades</a>
+                            </li>
+                            <li>
+                                <a href="#">Exchange Trades</a>
+                            </li>
+                        </ul>
+                        <!-- /.nav-second-level -->
+                    </li>
+                    <li>
+                        <a href="#taxreport"><i class="fa fa-calculator fa-fw"></i>Tax Report</a>
+                    </li>
+                </ul>
             </div>
-    <!-- /#wrapper -->
+            <!-- /.sidebar-collapse -->
         </div>
+        <!-- /.navbar-static-side -->
+    </nav>
+
+    <!-- Wrapper div only for loading purposes -->
+    <div class="loadingwrapper">
+        <div class="loadingwrapper_text"></div>
+    </div>
+    <!-- / Wrapper div only for loading purposes -->
+
+    <!-- Main page start -->
+    <div id="page-wrapper">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Dashboard</h1>
+            </div>
+            <!-- /.col-lg-12 -->
+        </div>
+        <!-- /.row -->
+        <div class="row">
+            <div id="dashboard-contents" class="col-lg-12">
+                <!-- Boxes go in here -->
+            </div>
+        </div>
+        <!-- /#wrapper -->
+    </div>
 
     <!-- jQuery -->
     <!-- <script src="../node_modules/startbootstrap-sb-admin-2/vendor/jquery/jquery.min.js"></script> -->
-	<!-- Include jquery the electron way -->
-	<script>
-    window.jQuery = window.$ = require('jquery');
-	</script>
+    <!-- Include jquery the electron way -->
+    <script>
+        window.jQuery = window.$ = require('jquery');
+    </script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="depending_js/bootstrap.min.js"></script>
@@ -193,21 +197,21 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="depending_js/sb-admin-2.js"></script>
-	<!-- js source for Datepicker -->
-	<script src="depending_js/jquery.datetimepicker.full.min.js"></script>
-	<!-- js source for context menu -->
-	<script src="depending_js/jquery.contextMenu.min.js"></script>
-	<!-- js source for jquery-confirm -->
-	<script src="depending_js/jquery-confirm.js"></script>
-	<!-- js source for jquery.multi-select -->
-	<script src="depending_js/jquery.multi-select.js"></script>
-	<!-- js source for jquery.pulsate -->
-	<script src="depending_js/jquery.pulsate.min.js"></script>
-	<script>
+    <!-- js source for Datepicker -->
+    <script src="depending_js/jquery.datetimepicker.full.min.js"></script>
+    <!-- js source for context menu -->
+    <script src="depending_js/jquery.contextMenu.min.js"></script>
+    <!-- js source for jquery-confirm -->
+    <script src="depending_js/jquery-confirm.js"></script>
+    <!-- js source for jquery.multi-select -->
+    <script src="depending_js/jquery.multi-select.js"></script>
+    <!-- js source for jquery.pulsate -->
+    <script src="depending_js/jquery.pulsate.min.js"></script>
+    <script>
         require('./dist/renderer.js');
-        require( 'datatables.net' )( window, $ );
-        require( 'datatables.net-dt' )( window, $ );
-	</script>
+        require('datatables.net')(window, $);
+        require('datatables.net-dt')(window, $);
+    </script>
 </body>
 
 </html>
