Implement logout functionality in the frontend

--- a/ui/index.html
+++ b/ui/index.html
@@ -118,8 +118,8 @@
                         <a href="#settings"><i class="fa fa-gear fa-fw"></i> Settings</a>
                     </li>
                     <li class="divider"></li>
-                    <li>
-                        <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                    <li id="logout_button">
+                        <a href="#logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                     </li>
                 </ul>
             </li>
