Add statistics rendering
- Add new premium api call to get the statistics renderer
- Add local api call to get the net value data
- Add a new page in the UI that utilizes the statistics renderer to
  draw stats

--- a/ui/index.html
+++ b/ui/index.html
@@ -150,6 +150,9 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
+                        <a href="#statistics"><i class="fa fa-bar-chart fa-fw"></i>Statistics</a>
+                    </li>
+                    <li>
                         <a href="#taxreport"><i class="fa fa-calculator fa-fw"></i>Tax Report</a>
                     </li>
                 </ul>
