Adds basic setup for notification area

--- a/ui/index.html
+++ b/ui/index.html
@@ -93,6 +93,16 @@
                 </a>
                 <ul class="dropdown-menu dropdown-alerts">
                 </ul>
+            </li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" id="notification-badge" data-toggle="dropdown" href="#">
+                    <i class="fa fa-info-circle fa-fw"></i>
+                    <i class="fa fa-caret-down"></i>
+                    <span class="badge">0</span>
+                </a>
+                <ul class="dropdown-menu" id="notification-messages">
+                </ul>
+            </li>
                 <!-- .dropdown tasks loading -->
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
