--- a/ui/index.html
+++ b/ui/index.html
@@ -86,17 +86,9 @@
             </ul>
         </ul>
         <ul class="nav navbar-top-links navbar-right">
-            <!-- .dropdown alert -->
-            <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    <i class="fa fa-bell fa-fw"></i> <i class="fa fa-caret-down"></i>
-                </a>
-                <ul class="dropdown-menu dropdown-alerts">
-                </ul>
-            </li>
             <li class="dropdown">
                 <a class="dropdown-toggle" id="notification-badge" data-toggle="dropdown" href="#">
-                    <i class="fa fa-info-circle fa-fw"></i>
+                    <i class="fa fa-bell fa-fw"></i>
                     <i class="fa fa-caret-down"></i>
                     <span class="badge">0</span>
                 </a>
