Use Rotki instead of Rotkehlchen in many user-facing places

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="UI of the Rotkehlchen application">
     <meta name="author" content="Lefteris Karapetsas">
 
-    <title>Rotkehlchen</title>
+    <title>Rotki</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -61,7 +61,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="">Rotkehlchen</a>
+            <a class="navbar-brand" href="">Rotki</a>
         </div>
         <!-- /.navbar-header -->
         <ul class="nav navbar-top-links navbar-status-icons">
