--- a/ui/index.html
+++ b/ui/index.html
@@ -61,7 +61,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="">Rotki</a>
+            <a class="navbar-brand" href="">Rotki v1.0.2</a>
         </div>
         <!-- /.navbar-header -->
         <ul class="nav navbar-top-links navbar-status-icons">
