Add a data import sidebar link and page

--- a/ui/index.html
+++ b/ui/index.html
@@ -140,6 +140,9 @@
                         <a href="#index"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                     </li>
                     <li>
+                        <a href="#dataimport"><i class="fa fa-download fa-fw"></i> Import Data</a>
+                    </li>
+                    <li>
                         <a><i class="fa fa-exchange fa-fw"></i> Trades<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
