--- a/electron-app/public/index.html
+++ b/electron-app/public/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<!-- Theme is based on https://blackrockdigital.github.io/startbootstrap-sb-admin-2/pages/index.html -->
 <html lang="en">
-
 <head>
 
     <meta charset="utf-8">
@@ -14,7 +12,7 @@
 </head>
 
 <body>
-    <div id="wrapper"></div>
+    <div id="app"></div>
 </body>
 
 </html>
